@@ -1,5 +1,6 @@
 **pnp-0.6.11 ??/??/2011**
   * Bugfix: Zoom in/out is working again ( Reported by Thorben Soehl )
+  * Featue: npcd.cfg -  New option perfdata_file_processing_interval used by npcdmod
 
 **pnp-0.6.10 12/15/2010**
 
